--- a/glcts-test/snb.conf
+++ b/glcts-test/snb.conf
@@ -14,6 +14,38 @@ KHR-GL33.transform_feedback.capture_geometry_separate_test = mesa 1afa6814ec2a2a
 KHR-GL33.pipeline_statistics_query_tests_ARB.functional_non_rendering_commands_do_not_affect_queries = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
 KHR-GL33.pipeline_statistics_query_tests_ARB.functional_default_qo_values = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
 KHR-GL33.pipeline_statistics_query_tests_ARB.functional_fragment_shader_invocations = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
+GTF-GL33.gtf31.GL3Tests.draw_instanced.draw_instanced_mode = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf30.GL3Tests.transform_feedback.transform_feedback_overflow = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf30.GL3Tests.transform_feedback.transform_feedback_builtins = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_basevertex = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_invalid_count = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_primcount = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.primitive_restart.primitive_restart_incomplete = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_invalid_start_end = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.vertex_array_bgra.vertex_array_bgra_primitive_types = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_count = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_start = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.uniform_buffer_object.uniform_buffer_object_implementation_dependent_limits = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_basic = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_end = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_mode = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_attrib_size = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_overflow = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_type = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.uniform_buffer_object.uniform_buffer_object_max_number_of_uniform_blocks = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf30.GL3Tests.transform_feedback.transform_feedback_geometry = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.primitive_restart.primitive_restart_incomplete2 = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_range = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.uniform_buffer_object.uniform_buffer_object_max_number_of_uniform_blocks_exceeded = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_pointer = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf21.GL3Tests.texture_lod_bias.texture_lod_bias_all = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_stride = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_invalid_mode = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.primitive_restart.primitive_restart_incomplete3 = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf21.GL3Tests.texture_lod_bias.texture_lod_bias_clamp_m_g_M = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_upconvert = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.primitive_restart.primitive_restart_mode = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.draw_elements_base_vertex.draw_elements_base_vertex_invalid_type = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
 
 [expected-crashes]
 KHR-GL33.texture_size_promotion.functional = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
@@ -25,6 +57,7 @@ KHR-GL33.transform_feedback_overflow_query_ARB.multiple-streams-multiple-buffers
 KHR-GL33.transform_feedback_overflow_query_ARB.error-no-active-query = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
 KHR-GL33.transform_feedback_overflow_query_ARB.context-state-update = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
 KHR-GL33.transform_feedback_overflow_query_ARB.error-incompatible-target = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
+GTF-GL33.gtf30.GL3Tests.conditional_render.conditional_render_test7 = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
 
 [fixed-tests]
 
