--- a/glcts-test/ivb.conf
+++ b/glcts-test/ivb.conf
@@ -10,6 +10,10 @@ KHR-GL33.pipeline_statistics_query_tests_ARB.functional_fragment_shader_invocati
 
 [expected-crashes]
 KHR-GL33.texture_size_promotion.functional = mesa 1afa6814ec2a2aa367909452d6777dc9dc9fedb8
+GTF-GL33.gtf30.GL3Tests.conditional_render.conditional_render_test7 = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf31.GL3Tests.primitive_restart.primitive_restart_draw_elements = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf32.GL3Tests.vertex_array_bgra.vertex_array_bgra_draw_calls = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
+GTF-GL33.gtf30.GL3Tests.transform_feedback.transform_feedback_double_precision = mesa 3260a96c17a5738004cd7b126d934331b119c8ce
 
 [fixed-tests]
 
