jenkins updates due to bisect of piglit

--- a/piglit-test/snb.conf
+++ b/piglit-test/snb.conf
@@ -215,6 +215,7 @@ piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-uint-2darray = pigli
 piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2d = piglit a76e2db38179a7923745b4f9b15fd94198e8cfab
 piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2darray = piglit a76e2db38179a7923745b4f9b15fd94198e8cfab
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
+piglit.spec.!opengl es 3_0.gles-3_0-transform-feedback-uniform-buffer-object = piglit d0b975aa50246515828e4687bc812ccf8010f33d
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
