--- a/piglit-test/g33.conf
+++ b/piglit-test/g33.conf
@@ -74,6 +74,8 @@ piglit.spec.ext_texture_compression_s3tc.gen-compressed-teximage = mesa 18e2aa06
 piglit.spec.arb_depth_texture.texwrap formats bordercolor = mesa 18e2aa063ca8e2aeb22a72253891e6f8f5d0d96b
 piglit.spec.ext_texture_compression_s3tc.s3tc-targeted = piglit 918e3eb35f609487a7749b0d65f9544533531cc7
 piglit.spec.arb_framebuffer_object.fbo-blit-stretch = piglit 3a9efab0da277ec2ddf954576ba7d2bf40c688a9
+piglit.spec.!opengl 1_4.gl-1_4-dlist-multidrawarrays = mesa 8e4efdc895eacca931b94a0c1fa01aae5c34463b
+piglit.spec.!opengl 1_4.draw-batch = mesa 8e4efdc895eacca931b94a0c1fa01aae5c34463b
 
 [expected-crashes]
 piglit.spec.!opengl 1_1.read-front clear-front-first
