mesa jenkins updates due to piglit=88a9a9979

--- a/piglit-test/cfl.conf
+++ b/piglit-test/cfl.conf
@@ -30,6 +30,7 @@ piglit.spec.khr_texture_compression_astc.sliced-3d-miptree-gl srgb-fp
 piglit.spec.khr_texture_compression_astc.sliced-3d-miptree-gles srgb-fp
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [expected-crashes]
 piglit.fast_color_clear.fcc-front-buffer-distraction
@@ -54,6 +55,7 @@ piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc8
 piglit.spec.!opengl 1_1.read-front samples.16 = mesa 2665d012a8a12971c87861e789a520951df42f3c skip to fail mesa 17.3
 piglit.spec.!opengl 1_1.read-front clear-front-first samples.16 = mesa 2665d012a8a12971c87861e789a520951df42f3c skip to fail mesa 17.3
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
+piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [fixed-tests]
 piglit.spec.arb_shader_bit_encoding.execution.and-clamp = piglit 3093326348b632ce9a9b92b9289725c400aa77b0
