--- a/piglit-test/bxtm32.conf
+++ b/piglit-test/bxtm32.conf
@@ -99,6 +99,7 @@ piglit.spec.arb_shader_subroutine.linker.no-overloads_vert = mesa 9fc86d4f53a66a
 piglit.spec.glsl-1_20.execution.fs-deref-literal-array-of-structs-with-multiple-members-large-array = piglit c8f4fd9eeb298a2ef0855927f22634f794ef3eff
 piglit.spec.glsl-1_50.linker.interstage-multiple-shader-objects = piglit 56e7e5583cd4a3ca15a8cda154d46d168959dd25
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [expected-crashes]
 piglit.spec.ext_framebuffer_blit.fbo-sys-sub-blit
@@ -126,6 +127,7 @@ piglit.spec.!opengl 1_1.read-front samples.16 = mesa f6d38785e8b28a6dd303884798b
 piglit.spec.!opengl 1_1.read-front clear-front-first samples.16 = mesa f6d38785e8b28a6dd303884798b823e289817741
 piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc87c5463
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
+piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [fixed-tests]
 piglit.spec.arb_copy_image.arb_copy_image-formats = piglit 3ddd90f
