--- a/piglit-test/g965.conf
+++ b/piglit-test/g965.conf
@@ -62,6 +62,7 @@ piglit.spec.arb_shader_texture_lod.execution.arb_shader_texture_lod-texgradcube 
 piglit.spec.arb_point_parameters.arb_point_parameters-point-attenuation = piglit 3b9e5ba14b930fe61761d5ddbd736593ef000228
 piglit.spec.glsl-1_20.execution.fs-deref-literal-array-of-structs-with-multiple-members-large-array = piglit c8f4fd9eeb298a2ef0855927f22634f794ef3eff
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
