--- a/piglit-test/snbm32.conf
+++ b/piglit-test/snbm32.conf
@@ -216,6 +216,7 @@ piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2d = piglit a7
 piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2darray = piglit a76e2db38179a7923745b4f9b15fd94198e8cfab
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
 piglit.spec.!opengl es 3_0.gles-3_0-transform-feedback-uniform-buffer-object = piglit d0b975aa50246515828e4687bc812ccf8010f33d
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
@@ -236,6 +237,7 @@ piglit.spec.!opengl 1_0.gl-1_0-front-invalidate-back = piglit 09459ca
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = piglit 09459ca
 piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc87c5463
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
+piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = piglit 88a9a99794f6108b656d4142cecd373b7995863c
 
 [fixed-tests]
 piglit.spec.arb_occlusion_query.occlusion_query_meta_save = mesa bb77745681e179b53ea64da7bc1987b57643b7b0
