piglit-test: correct blame revision for regression
https://bugs.freedesktop.org/show_bug.cgi?id=104794

--- a/piglit-test/cfl.conf
+++ b/piglit-test/cfl.conf
@@ -30,7 +30,7 @@ piglit.spec.khr_texture_compression_astc.sliced-3d-miptree-gl srgb-fp
 piglit.spec.khr_texture_compression_astc.sliced-3d-miptree-gles srgb-fp
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 513c2263cbff45edb105c7b46e58f316e06746ab
 
 [expected-crashes]
 piglit.fast_color_clear.fcc-front-buffer-distraction
