--- a/piglit-test/skl.conf
+++ b/piglit-test/skl.conf
@@ -84,7 +84,7 @@ piglit.spec.arb_shader_subroutine.linker.no-overloads_vert = mesa 9fc86d4f53a66a
 piglit.spec.glsl-1_20.execution.fs-deref-literal-array-of-structs-with-multiple-members-large-array = piglit c8f4fd9eeb298a2ef0855927f22634f794ef3eff
 piglit.spec.glsl-1_50.linker.interstage-multiple-shader-objects = piglit 56e7e5583cd4a3ca15a8cda154d46d168959dd25
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 513c2263cbff45edb105c7b46e58f316e06746ab
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
