--- a/piglit-test/snb.conf
+++ b/piglit-test/snb.conf
@@ -216,7 +216,7 @@ piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2d = piglit a7
 piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2darray = piglit a76e2db38179a7923745b4f9b15fd94198e8cfab
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
 piglit.spec.!opengl es 3_0.gles-3_0-transform-feedback-uniform-buffer-object = piglit d0b975aa50246515828e4687bc812ccf8010f33d
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 88a9a99794f6108b656d4142cecd373b7995863c
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 513c2263cbff45edb105c7b46e58f316e06746ab
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
