mesa jenkins updates due to deqp=b845c096

--- a/deqp-test/hsw.conf
+++ b/deqp-test/hsw.conf
@@ -1,6 +1,4 @@
 [expected-failures]
-dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_npot
-dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_pot
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
@@ -4843,4 +4841,6 @@ dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geom
 dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geometry.uvec2 = mesa 16ac70bdcf29d075e11f1ebc54405d0ea19b561c
 dEQP-GLES31.functional.program_interface_query.program_input.type.separable_geometry.int = mesa 16ac70bdcf29d075e11f1ebc54405d0ea19b561c
 dEQP-GLES31.functional.srgb_texture_decode.skip_decode.srgba8.texel_fetch = mesa 26f1ba94a384718e0e5974c10d4f758459ef0b10
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_npot = deqp b845c09634641077dd6ced0e984dc6d0e29196de
+dEQP-GLES31.functional.texture.border_clamp.formats.rgba32ui.nearest_size_pot = deqp b845c09634641077dd6ced0e984dc6d0e29196de
 
