mesa jenkins updates due to deqp=88d75610

--- a/deqp-test/snb.conf
+++ b/deqp-test/snb.conf
@@ -4,14 +4,6 @@ dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_fragment = de
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_fragment = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
 dEQP-GLES3.functional.shaders.preprocessor.builtin.line_and_file_expression_vertex = deqp 55988830cd949f25d47ed6aefdfdaef655ab2080
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.scalar
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec2
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec3
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec4
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.scalar
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec2
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec3
-dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec4
 
 [expected-crashes]
 dEQP-GLES3.functional.shaders.indexing.moredynamic.with_value_from_indexing_expression_fragment = deqp ce989f2957815b55acda4f9a8f77651a223d32d9
@@ -2990,4 +2982,12 @@ dEQP-GLES3.functional.shaders.precision.int.lowp_mul_fragment = mesa db682b8f0ea
 dEQP-GLES3.functional.shaders.precision.int.highp_mul_fragment = mesa db682b8f0eafd3b9d58e736e9e2f520943a89942
 dEQP-GLES3.functional.shaders.precision.uint.mediump_mul_fragment = mesa db682b8f0eafd3b9d58e736e9e2f520943a89942
 dEQP-GLES3.functional.shaders.precision.uint.highp_mul_fragment = mesa db682b8f0eafd3b9d58e736e9e2f520943a89942
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec4 = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec4 = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec3 = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.vec2 = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.scalar = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_fragment.scalar = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec3 = deqp 88d756104fb9788064cd7e66e28ae24742995128
+dEQP-GLES3.functional.shaders.builtin_functions.precision.mix.highp_vertex.vec2 = deqp 88d756104fb9788064cd7e66e28ae24742995128
 
