--- a/piglit-test/hswm32.conf
+++ b/piglit-test/hswm32.conf
@@ -85,6 +85,13 @@ piglit.spec.arb_sample_shading.samplemask 2 all = piglit 6fefc0b59b2f04884095f52
 piglit.spec.arb_sample_shading.samplemask 4 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
 piglit.spec.arb_sample_shading.samplemask 2 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
 piglit.spec.arb_sample_shading.samplemask 4 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_shader_draw_parameters.basevertex-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.baseinstance-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
