--- a/piglit-test/snb.conf
+++ b/piglit-test/snb.conf
@@ -217,6 +217,9 @@ piglit.spec.arb_texture_gather.texturegatheroffset.vs-r-red-unorm-2darray = pigl
 piglit.spec.!opengl 1_4.copy-pixels = piglit 5291e01fa2cf0dffd79eb11969562010b4c47e0f
 piglit.spec.!opengl es 3_0.gles-3_0-transform-feedback-uniform-buffer-object = piglit d0b975aa50246515828e4687bc812ccf8010f33d
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 269ebdb1c572ee99dd8af0ceea752adda8360e6c
+piglit.spec.arb_shader_draw_parameters.basevertex = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
