--- a/deqp-test/g965.conf
+++ b/deqp-test/g965.conf
@@ -25,6 +25,10 @@ dEQP-GLES2.functional.shaders.operator.exponential.sqrt.mediump_float_vertex = d
 dEQP-GLES2.functional.shaders.operator.exponential.sqrt.mediump_vec2_vertex = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.shaders.random.exponential.vertex.6 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.shaders.random.exponential.vertex.89 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
+dEQP-EGL.functional.create_context.rgba8888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgba8888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
 
 [expected-crashes]
 
