--- a/deqp-test/g33.conf
+++ b/deqp-test/g33.conf
@@ -54,6 +54,10 @@ dEQP-GLES2.functional.texture.filtering.cube.nearest_mipmap_nearest_nearest_repe
 dEQP-GLES2.functional.texture.filtering.cube.nearest_mipmap_nearest_nearest_repeat_rgb888 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.texture.filtering.cube.nearest_mipmap_nearest_nearest_repeat_rgba4444 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.texture.filtering.cube.nearest_mipmap_nearest_nearest_repeat_rgba8888 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
+dEQP-EGL.functional.create_context.rgba8888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgba8888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
 
 [expected-crashes]
 dEQP-GLES2.functional.texture.filtering.cube.linear_mipmap_linear_linear_mirror_rgba8888 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
