--- a/deqp-test/ilk.conf
+++ b/deqp-test/ilk.conf
@@ -3,6 +3,10 @@ dEQP-EGL.functional.create_context.no_config = deqp a8bd356e5802e8ca33bd847e7f40
 dEQP-GLES2.functional.clipping.point.wide_point_clip = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.clipping.triangle_vertex.clip_two.clip_neg_x_pos_z_and_neg_x_neg_y_neg_z = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
 dEQP-GLES2.functional.clipping.triangle_vertex.clip_two.clip_neg_y_neg_z_and_neg_x_neg_y_pos_z = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
+dEQP-EGL.functional.create_context.rgba8888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgba8888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-EGL.functional.create_context.rgb888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
 
 [expected-crashes]
 
