--- a/piglit-test/cnl.conf
+++ b/piglit-test/cnl.conf
@@ -31,6 +31,23 @@ piglit.spec.arb_sample_shading.arb_sample_shading-builtin-gl-sample-mask-mrt-alp
 piglit.spec.arb_tessellation_shader.arb_tessellation_shader-large-uniforms 
 piglit.spec.!opengl 1_1.linestipple 
 piglit.spec.arb_separate_shader_objects.execution.layout-location-struct 
+piglit.spec.arb_sample_shading.samplemask 16 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.!opengl 1_1.degenerate-prims = piglit 269ebdb1c572ee99dd8af0ceea752adda8360e6c
+piglit.spec.arb_sample_shading.samplemask 2 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 6 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 16 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 8 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 8 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 4 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 6 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 2 = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_sample_shading.samplemask 4 all = piglit 6fefc0b59b2f04884095f5226854f865e379fec7
+piglit.spec.arb_shader_draw_parameters.basevertex-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 
 [expected-crashes]
 piglit.spec.!opengl 1_1.read-front clear-front-first samples.8 
