Add cnl to switched power

--- a/reboot_hung_systems_config.json
+++ b/reboot_hung_systems_config.json
@@ -13,7 +13,8 @@
         "otc-gfxtest-glk-02.local": {"switch": 2, "outlet": 2},
         "otc-gfxtest-glk-06.local": {"switch": 2, "outlet": 3},
         "otc-gfxtest-glk-04.local": {"switch": 2, "outlet": 4},
-        "otc-gfxtest-glk-05.local": {"switch": 2, "outlet": 5}
+        "otc-gfxtest-glk-05.local": {"switch": 2, "outlet": 5},
+        "otc-gfxtest-cnlgt05-01.local": {"switch": 2, "outlet": 6}
     },
     "switches": {
         "1": {
