jenkins updates due to bisect of deqp

--- a/deqp-test/g33.conf
+++ b/deqp-test/g33.conf
@@ -58,6 +58,7 @@ dEQP-EGL.functional.create_context.rgba8888_no_depth_no_stencil = deqp 307c716b4
 dEQP-EGL.functional.create_context.rgb888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
 dEQP-EGL.functional.create_context.rgba8888_depth_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
 dEQP-EGL.functional.create_context.rgb888_no_depth_no_stencil = deqp 307c716b4ecfadf0a6f9def9bed63e41d61e2969
+dEQP-GLES2.functional.rasterization.limits.points = deqp a73c1d93008c1b4cac1d82daa2b4ba020da1d1b6
 
 [expected-crashes]
 dEQP-GLES2.functional.texture.filtering.cube.linear_mipmap_linear_linear_mirror_rgba8888 = deqp a8bd356e5802e8ca33bd847e7f403d8d9c1e7ed4
