mesa jenkins updates due to mesa=4562a7b0e82

--- a/glescts-test/byt.conf
+++ b/glescts-test/byt.conf
@@ -252,6 +252,7 @@ KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a
 
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski
+KHR-GLES31.core.shader_image_load_store.advanced-sso-simple = mesa 4562a7b0e82bf664b30ee72da141d070adc659da
 
 [fixed-tests]
 KHR-GLES31.functional.program_interface_query.program_input.type.interface_blocks.in.named_block_explicit_location.struct.int = mesa 922b471777c524f497fb8eda97153a898900f223 post-12.0
