--- a/glescts-test/glk.conf
+++ b/glescts-test/glk.conf
@@ -4,6 +4,7 @@ KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski = initial_fail
 KHR-GLES32.gtf = initial_fail
+KHR-GLES31.core.shader_image_load_store.advanced-sso-simple = mesa 4562a7b0e82bf664b30ee72da141d070adc659da
 
 [fixed-tests]
 KHR-GLES2.functional.state_query.integers.viewport_getfloat = mesa af45b8159cf5b9c15000e4221af6dc4cb85bd05e
