--- a/glescts-test/hsw.conf
+++ b/glescts-test/hsw.conf
@@ -6409,6 +6409,7 @@ KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a
 
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski
+KHR-GLES31.core.shader_image_load_store.advanced-sso-simple = mesa 4562a7b0e82bf664b30ee72da141d070adc659da
 
 [fixed-tests]
 KHR-GLES2.functional.clipping.point.wide_point_clip = mesa af8ad495415e9d71fd6255114d4ea5e0ab6a1e2a post-11.2
