--- a/glescts-test/skl.conf
+++ b/glescts-test/skl.conf
@@ -4,6 +4,7 @@ KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa e401cfa28a
 [expected-crashes]
 KHR-GLES32.gtf
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski
+KHR-GLES31.core.shader_image_load_store.advanced-sso-simple = mesa 4562a7b0e82bf664b30ee72da141d070adc659da
 
 [fixed-tests]
 KHR-GLES31.functional.shaders.multisample_interpolation.interpolate_at_sample.centroid_qualified.multisample_rbo_16 = mesa 922b471777c524f497fb8eda97153a898900f223 post-12.0
