--- a/glescts-test/cfl.conf
+++ b/glescts-test/cfl.conf
@@ -4,6 +4,7 @@ KHR-GLESEXT.draw_elements_base_vertex_tests.invalid_mapped_bos = mesa 9cd60fce9c
 [expected-crashes]
 KHR-GLES31.core.texture_storage_multisample.APIGLSampleMaski = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
 KHR-GLES32.gtf = mesa 9cd60fce9c22737000a8f8dc711141f8a523fe75
+KHR-GLES31.core.shader_image_load_store.advanced-sso-simple = mesa 4562a7b0e82bf664b30ee72da141d070adc659da
 
 [fixed-tests]
 KHR-GLES3.shaders.preprocessor.extensions.invalid_char_in_behavior_fragment = cts ff5e186db7df4d2f28017062d50ed894e7cc37fd
