Piglit: update blame revision for Bug 104794
piglit fix was pushed at the same time as the mesa commit.

--- a/piglit-test/g45.conf
+++ b/piglit-test/g45.conf
@@ -333,7 +333,7 @@ piglit.shaders.glsl-vs-normalscale = mesa 9bdb5457f4ecabd59e05d0b6cea1ff88bcb49d
 piglit.object namespace pollution.texture with gldrawpixels = mesa bd32d4d0671777d9b7d6e3a592abb67563a8063c
 piglit.object namespace pollution.texture with glcopypixels = mesa bd32d4d0671777d9b7d6e3a592abb67563a8063c
 piglit.object namespace pollution.texture with glbitmap = mesa bd32d4d0671777d9b7d6e3a592abb67563a8063c
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 0da434fb47c19f3cbf0b2561ac9595a89fb236a1
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 5f11fdff7b329eb5712eed98f783a6164410336f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
