--- a/piglit-test/snb.conf
+++ b/piglit-test/snb.conf
@@ -703,7 +703,7 @@ piglit.object namespace pollution.texture with glcopypixels = mesa bd32d4d067177
 piglit.object namespace pollution.texture with glbitmap = mesa bd32d4d0671777d9b7d6e3a592abb67563a8063c
 piglit.spec.glsl-1_50.execution.geometry.primitive-types gl_line_loop = piglit 740ef3f21b1a2598d840ac4b847fc3bafa79b2c8
 piglit.spec.glsl-1_50.execution.geometry.primitive-types gl_triangle_strip = piglit 740ef3f21b1a2598d840ac4b847fc3bafa79b2c8
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 0da434fb47c19f3cbf0b2561ac9595a89fb236a1
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 5f11fdff7b329eb5712eed98f783a6164410336f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
