--- a/piglit-test/bswm32.conf
+++ b/piglit-test/bswm32.conf
@@ -1049,7 +1049,7 @@ piglit.spec.arb_vertex_type_2_10_10_10_rev.draw-vertices-2101010 = piglit 35daaa
 piglit.spec.glsl-1_50.execution.geometry.primitive-types gl_line_loop = piglit 740ef3f21b1a2598d840ac4b847fc3bafa79b2c8
 piglit.spec.glsl-es-3_00.built-in constants = piglit 8eefd87ed7a7be9b181bbe7d12a6f6c54921d522
 piglit.spec.arb_draw_indirect.arb_draw_indirect-draw-arrays-prim-restart = piglit 70e7af15b75eb911d2c03c133418a39de0fad0d0
-piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = mesa 0da434fb47c19f3cbf0b2561ac9595a89fb236a1
+piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 5f11fdff7b329eb5712eed98f783a6164410336f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
