mesa jenkins updates due to piglit=e8ca5646e6

--- a/piglit-test/bsw.conf
+++ b/piglit-test/bsw.conf
@@ -91,6 +91,10 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08
 piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatoffset-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-nonuniform = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatcentroid-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back = initial_bsw_fail
@@ -116,6 +120,7 @@ piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc8
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-of-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [fixed-tests]
 piglit.shaders.glsl-getactiveuniform-count. glsl-getactiveuniform-mvp = mesa_87a4bc5
