--- a/piglit-test/cnl.conf
+++ b/piglit-test/cnl.conf
@@ -46,6 +46,10 @@ piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance-indirect = piglit
 piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatoffset-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-nonuniform = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatcentroid-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [expected-crashes]
 piglit.spec.!opengl 1_1.read-front clear-front-first samples.8
@@ -69,6 +73,7 @@ piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes
 piglit.spec.ext_framebuffer_blit.fbo-sys-blit
 piglit.spec.!opengl 1_1.read-front
 piglit.spec.!opengl 1_1.masked-clear
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-of-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [fixed-tests]
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 4210d072f1a40fe06c6ca46e985871a384cca514
