--- a/piglit-test/cfl.conf
+++ b/piglit-test/cfl.conf
@@ -46,6 +46,10 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = piglit 3943e72582a08
 piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = piglit 3943e72582a08620dbde122c66ed35417bc197f8
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatoffset-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-nonuniform = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatcentroid-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1_0-front-invalidate-back
@@ -70,6 +74,7 @@ piglit.spec.!opengl 1_1.read-front clear-front-first samples.16 = mesa 2665d012a
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-of-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [fixed-tests]
 piglit.spec.arb_shader_bit_encoding.execution.and-clamp = piglit 3093326348b632ce9a9b92b9289725c400aa77b0
