--- a/piglit-test/glkm32.conf
+++ b/piglit-test/glkm32.conf
@@ -52,6 +52,10 @@ piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-pack
 piglit.spec.glsl-es-3_00.execution.built-in-functions.const-packunorm2x16 = piglit gcc_7
 piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm4x8 = piglit gcc_7
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatoffset-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-nonuniform = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatcentroid-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1_0-front-invalidate-back = mesa 3015a23fe0eab17cde163b1de141f75c2f6410e4
@@ -76,6 +80,7 @@ piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc8
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-of-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [fixed-tests]
 piglit.spec.glsl-1_50.execution.geometry.clip-distance-vs-gs-out = mesa 05a4e3a0096a8a3ed277bbcf5b0b1393b5e6e494
