--- a/piglit-test/ivbm32.conf
+++ b/piglit-test/ivbm32.conf
@@ -177,6 +177,10 @@ piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-pack
 piglit.spec.glsl-es-3_00.execution.built-in-functions.const-packunorm2x16 = piglit gcc_7
 piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-packunorm4x8 = piglit gcc_7
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatoffset-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-nonuniform = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatcentroid-block-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate
@@ -218,6 +222,7 @@ piglit.spec.!opengl 1_1.masked-clear = piglit e9664264fa82055efae23d653f774febc8
 piglit.spec.!opengl 1_0.gl-1_0-drawbuffer-modes = piglit 75ba8aea0e6eff0bc30821df9640ee4053dd98b6
 piglit.spec.!opengl 1_0.gl-1_0-swapbuffers-behavior = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.fast_color_clear.fcc-front-buffer-distraction = mesa 880573e7370b866c94513f59ad0bb0b10660643f
+piglit.spec.arb_gpu_shader5.execution.built-in-functions.fs-interpolateatsample-array-of-array = piglit e8ca5646e62e523fa07bef88a12a363df3bfe17b
 
 [fixed-tests]
 piglit.spec.arb_occlusion_query.occlusion_query_meta_save = mesa bb77745681e179b53ea64da7bc1987b57643b7b0
