--- a/piglit-test/bxtm32.conf
+++ b/piglit-test/bxtm32.conf
@@ -855,4 +855,5 @@ piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks
 piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 4210d072f1a40fe06c6ca46e985871a384cca514
 piglit.shaders.glsl-fs-pointcoord = mesa bc73016703f8f2815e000f1c100532cf6e13cd3c
+piglit.shaders.glsl-uniform-initializer-7 = mesa 6f8518e0687
 
