--- a/piglit-test/bytm32.conf
+++ b/piglit-test/bytm32.conf
@@ -808,4 +808,5 @@ piglit.spec.arb_draw_indirect.arb_draw_indirect-draw-arrays-prim-restart = pigli
 piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 5f11fdff7b329eb5712eed98f783a6164410336f
 piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 4210d072f1a40fe06c6ca46e985871a384cca514
+piglit.shaders.glsl-uniform-initializer-7 = mesa 6f8518e0687
 
