--- a/piglit-test/snbm32.conf
+++ b/piglit-test/snbm32.conf
@@ -713,4 +713,5 @@ piglit.spec.glsl-1_50.execution.geometry.primitive-types gl_triangle_strip = pig
 piglit.spec.arb_internalformat_query2.samples and num_sample_counts pname checks = piglit 5f11fdff7b329eb5712eed98f783a6164410336f
 piglit.spec.arb_arrays_of_arrays.execution.ubo.fs-const-explicit-binding = mesa 37a8d907cc167279f44e2e15f980cd93869a51f9
 piglit.spec.!opengl 1_1.degenerate-prims = piglit 4210d072f1a40fe06c6ca46e985871a384cca514
+piglit.shaders.glsl-uniform-initializer-7 = mesa 6f8518e0687
 
