--- a/debian_installer/jenkins.cfg
+++ b/debian_installer/jenkins.cfg
@@ -85,11 +85,10 @@ d-i pkgsel/update-policy select none
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/bootdev string /dev/<disk>
 
-# Install the salt-minion and avahi-daemon
-# These are needed for salt to finish provisioning the system
-# XXX: Tsocks is required here because it is currently only in debian stable
-# and sid, but not testing for "reasons"
-d-i pkgsel/include string salt-minion avahi-daemon
+# Install avahi-daemon
+# Note: Salt is not installed here because it is no longer in the debian repo..
+# It will be installed in finalize.sh
+d-i pkgsel/include string avahi-daemon
 
 d-i preseed/late_command string \
     cp /cdrom/finalize.sh /target/finalize.sh; in-target ./finalize.sh
