--- a/piglit-test/cflm32.conf
+++ b/piglit-test/cflm32.conf
@@ -44,7 +44,6 @@ piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-pack
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.spec.arb_gpu_shader_fp64.execution.built-in-functions.fs-frexp-dvec4-only-exponent = piglit 03ba28ba3f107e2cc4a2e88dc84776515f98faa8
 piglit.spec.glsl-1_20.execution.qualifiers.vs-out-conversion-int-to-float-vec4-index = piglit 93b35926a150e318439d2505901288594b3548f5
-piglit.spec.glsl-1_40-compat.execution.built-in-constants = piglit b57600ba58ae0cdbad86826fd653aa0191212f27
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1_0-front-invalidate-back
@@ -118,4 +117,5 @@ piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance-indirect = mesa 3
 piglit.spec.arb_shader_draw_parameters.basevertex-indirect = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
 piglit.spec.arb_shader_draw_parameters.basevertex = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
 piglit.spec.arb_shader_draw_parameters.vertexid-zerobased-indirect = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
+piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 
