--- a/piglit-test/snbm32.conf
+++ b/piglit-test/snbm32.conf
@@ -220,7 +220,6 @@ piglit.spec.arb_shading_language_packing.execution.built-in-functions.const-pack
 piglit.spec.oes_packed_depth_stencil.depth_stencil texture gles1 = mesa 880573e7370b866c94513f59ad0bb0b10660643f
 piglit.spec.!opengl 3_2.gl-3_2-adj-prims pv-first = piglit 03ba28ba3f107e2cc4a2e88dc84776515f98faa8
 piglit.spec.glsl-1_20.execution.qualifiers.vs-out-conversion-int-to-float-vec4-index = piglit 93b35926a150e318439d2505901288594b3548f5
-piglit.spec.glsl-1_40-compat.execution.built-in-constants = piglit b57600ba58ae0cdbad86826fd653aa0191212f27
 
 [expected-crashes]
 piglit.spec.!opengl 1_0.gl-1.0-front-invalidate-back
@@ -720,4 +719,5 @@ piglit.spec.arb_shader_draw_parameters.vertexid-zerobased = mesa 3a1df14a7b5c165
 piglit.spec.arb_shader_draw_parameters.basevertex-baseinstance = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
 piglit.spec.arb_shader_draw_parameters.basevertex = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
 piglit.spec.arb_shader_draw_parameters.baseinstance = mesa 3a1df14a7b5c1652aa72eb6cf43e69ab447c6273
+piglit.spec.glsl-1_40-compat.execution.built-in-constants = mesa 9a21c96126d6a13e7b472ec622c517c0d0285ba8
 
